fix: :bug: corrigiendo el z-index de los filtros de producto

--- a/src/components/products/filters/filters.module.scss
+++ b/src/components/products/filters/filters.module.scss
@@ -23,6 +23,7 @@
   width: max-content;
 
   padding: 20px;
+  z-index: 20;
 
   .selection {
     display: flex;
